--- a/.env
+++ b/.env
@@ -20,3 +20,6 @@ POSTGRES_PASSWORD=pC6hAXWgscy7
 POSTGRES_DATABASE=neondb
 POSTGRES_URL_NO_SSL=postgres://neondb_owner:pC6hAXWgscy7@ep-empty-shape-a4grabg2-pooler.us-east-1.aws.neon.tech/neondb
 POSTGRES_PRISMA_URL=postgres://neondb_owner:pC6hAXWgscy7@ep-empty-shape-a4grabg2-pooler.us-east-1.aws.neon.tech/neondb?pgbouncer=true&connect_timeout=15&sslmode=require
+
+# Parameters for authentication
+AUTH_SECRET=Ot6f2DkpHgdTiNPeti05YS+DSwLPj6k7NSkzcuowvaI=
